# tpDcc-tools-unittests

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
docs/sphinx/: index.rst
tests/: test_general.py
tpDcc/tools/: __init__.py
tpDcc/tools/unittest/: __init__.py  _version.py
tpDcc/tools/unittest/core/: controller.py  model.py  unittest.py  view.py
tpDcc/tools/unittests/: __init__.py  __logging__.ini  __version__.py
tpDcc/tools/unittests/core/: client.py  consts.py  controller.py  model.py  tool.py  toolset.py  unittest.py  view.py
tpDcc/tools/unittests/dccs/maya/: unittestserver.py
tpDcc/tools/unittests/widgets/: console.py  tree.py  unittest.py
