[metadata]
name = tpDcc-tools-unittests
description = Tool to execute unit tests inside DCCs.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpDcc/tpDcc-tools-unittests

[options]
zip_safe = False
include_package_data = true
packages=find:
install_requires =
    tpDcc-libs-python
    tpDcc-core
    tpDcc-libs-qt
    tpDcc-libs-unittests

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpDcc/tools/unittests/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =